# sec-company-facts

./: .dockerignore  README.md  docker-compose.duckdb.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-parquet-bundle.yml  nightly-dolthub.yml  publish-duckdb-image.yml  publish-image.yml
docker/: Dockerfile.app  Dockerfile.duckdb  dolt-sql-server.yaml  entrypoint-duckdb.sh  entrypoint.sh
dolt/: schema.sql
openbb_sec/: ingest.py  run_pipeline.py
openbb_sec/db/: __init__.py  backend.py  ingest.py  query.py  schema.py
openbb_sec/utils/: company_facts.py  definitions.py  exchange_rates.py  helpers.py  non_xbrl_parser.py  sec_financials.py
openbb_sec/utils/statement_schema/: _detection.py  _types.py
openbb_sec/widgets/: __init__.py  apps.json  server.py
scripts/: manifest_diff.py
sec_app/: __init__.py  apps.json  cli.py  export_parquet.py  rebuild_gics.py  run_pipeline.py  server.py  standardize.py  widgets.json
sec_app/db/: __init__.py  backend.py  cache.py  dialect.py  duckdb_backend.py  exchange_rates.py  ingest.py  query.py  schema.py  sectors.py
