[tool.poetry]
name = "sec-app"
version = "0.1.0"
description = "Serving layer (Dolt SQL server + widgets API) for SEC company facts. Consumes the openbb-sec provider from PyPI."
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "sec_app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
# The SEC provider (models/fetchers + company-facts standardization) comes from PyPI.
openbb-sec = ">=1.6.1"
fastapi = ">=0.110"
uvicorn = { version = ">=0.30", extras = ["standard"] }
pymysql = "^1.1"
pyarrow = ">=17"
pandas = ">=2.0"
psutil = ">=5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
